@@ -125,9 +125,9 @@ Author URI: http://www.themeblvd.com
 }
 
 /* Hidden Responsive Side Menu */
-#tb-side-menu-wrapper,
-#tb-side-menu-wrapper .tb-side-menu > li,
-#tb-side-menu-wrapper .tb-search {
+.tb-side-menu-wrapper,
+.tb-side-menu-wrapper .tb-side-menu > li,
+.tb-side-menu-wrapper .tb-search {
 	border-color: rgba(0,0,0,.2);
 }
 
